--- a/examples/Sensors camera.ipynb
+++ b/examples/Sensors camera.ipynb
@@ -64,7 +64,7 @@
    "source": [
     "# Spawn camera\n",
     "camera_init_trans = carla.Transform(carla.Location(z=2))\n",
-    "camera = world.spawn_actor(camera_bp, camera_init_trans, attach_to=vehicle\n",
+    "camera = world.spawn_actor(camera_bp, camera_init_trans, attach_to=vehicle)\n",
     "\n",
     "# Callback stores sensor data in a dictionary for use outside callback                         \n",
     "def camera_callback(image, data_dict):\n",
